# landschaften-service

./: .gitignore  .sosrc  Procfile  README.md  landschaften-service.cabal  stack.yaml
.stack-work/: stack.sqlite3
.stack-work/ghci/06ec71c8/: cabal_macros.h
.stack-work/ghci/21c5cf8a/: cabal_macros.h
.stack-work/ghci/26fd1067/: cabal_macros.h
.stack-work/ghci/36842823/: cabal_macros.h
.stack-work/ghci/3e75e680/: cabal_macros.h
.stack-work/ghci/4e9edb64/: cabal_macros.h
.stack-work/ghci/5284a18e/: cabal_macros.h
.stack-work/ghci/5576a559/: cabal_macros.h
.stack-work/ghci/638335bf/: cabal_macros.h
.stack-work/ghci/69ebc87a/: cabal_macros.h
.stack-work/ghci/6c51eeb6/: cabal_macros.h
.stack-work/ghci/6e9ddcb9/: cabal_macros.h
.stack-work/ghci/8cafeef0/: cabal_macros.h
.stack-work/ghci/95361ae6/: cabal_macros.h
.stack-work/ghci/963f2ec1/: cabal_macros.h
.stack-work/ghci/9a70dd71/: cabal_macros.h
.stack-work/ghci/9f7ce66c/: cabal_macros.h
.stack-work/ghci/c953dc9f/: cabal_macros.h
.stack-work/ghci/ce541175/: cabal_macros.h
.stack-work/ghci/e283c40a/: cabal_macros.h
.stack-work/ghci/e347849e/: cabal_macros.h
.stack-work/ghci/e841127f/: cabal_macros.h
.stack-work/ghci/e91dc5c6/: cabal_macros.h
.stack-work/ghci/eb83835a/: cabal_macros.h
.stack-work/ghci/f3d54b05/: cabal_macros.h
.stack-work/ghci/f6b8c953/: cabal_macros.h
.stack-work/ghci/f9139090/: cabal_macros.h
.stack-work/ghci/ff2f235a/: cabal_macros.h
.stack-work/install/x86_64-osx/43a67a7b7ec565a68094708f4d914ac281c0ee81fddbfa8347d75701a49893ef/8.6.5/doc/: doc-index.html  index.html
.stack-work/install/x86_64-osx/43a67a7b7ec565a68094708f4d914ac281c0ee81fddbfa8347d75701a49893ef/8.6.5/doc/Only-0.1/: Data-Tuple-Only.html
.stack-work/install/x86_64-osx/43a67a7b7ec565a68094708f4d914ac281c0ee81fddbfa8347d75701a49893ef/8.6.5/doc/QuickCheck-2.13.2/: Test-QuickCheck-All.html  Test-QuickCheck-Arbitrary.html  Test-QuickCheck-Function.html  Test-QuickCheck-Gen-Unsafe.html  Test-QuickCheck-Gen.html  Test-QuickCheck-Modifiers.html  Test-QuickCheck-Monadic.html  Test-QuickCheck-Poly.html  Test-QuickCheck.html
.stack-work/install/x86_64-osx/43a67a7b7ec565a68094708f4d914ac281c0ee81fddbfa8347d75701a49893ef/8.6.5/doc/StateVar-1.2/: Data-StateVar.html
.stack-work/install/x86_64-osx/43a67a7b7ec565a68094708f4d914ac281c0ee81fddbfa8347d75701a49893ef/8.6.5/pkgdb/: landschaften-service-0.1.0.0-DZ4RgqcBcXfmTXj4IhUrx.conf  package.cache
.stack-work/install/x86_64-osx/6c29048965673d0512355e2826e8b6b07ab6999461cad42d385d53bd0ded7923/8.6.5/pkgdb/: landschaften-service-0.1.0.0-2vKyLupMvjOK8I1vGEdIBF.conf  package.cache
.stack-work/odir/: App.hi  AppSpec.hi  BuildQuery.hi  Domain.hi  Handlers.hi  Lib.hi  Main.hi
app/: Main.hs
exec/: Main.hs
src/: App.hs  BuildQuery.hs  Domain.hs  Handlers.hs
test/: AppSpec.hs
(+1074 files in other folders)
