name:                landschaften-service
version:             0.1.0.0
homepage:            https://github.com/githubuser/landschaften-service#readme
license:             BSD3
license-file:        LICENSE
author:              Christian Clampitt
maintainer:          christian.clampitt@nyu.edu
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    App
    Domain
    BuildQuery
    Handlers
  other-modules:
     Paths_landschaften_service
  ghc-options: -Wall
  build-depends:
      aeson
    , base >= 4.7 && < 5
    , bytestring >= 0.10
    , containers >= 0.5.9
    , http-client
    , http-types >= 0.12
    , postgresql-simple >= 0.5
    , resource-pool >= 0.2
    , servant
    , servant-client
    , servant-server
    , servant-options
    , text >= 1.2
    , transformers
    , utf8-string
    , wai
    , wai-cors
    , warp

  default-language:    Haskell2010

executable landschaften-service
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:
    Paths_landschaften_service
--    ghc-options: -Wall
  ghc-options:       -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
                    base
                    , landschaften-service
                         , aeson
                        , servant
                        , servant-client
                        , servant-server
                        , servant-options
                        , transformers
                        , wai
                        , wai-cors
                        , warp
                        , bytestring >= 0.10
                        , text >= 1.2
                        , http-client
                        , http-types >= 0.12
                        , postgresql-simple >= 0.5
                        , resource-pool >= 0.2
                        , utf8-string
  default-language:    Haskell2010

test-suite landschaften-service-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:
    AppSpec
    Paths_landschaften_service
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , landschaften-service
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
                         , http-client
                         , http-types
                         , servant
                         , servant-client
                         , servant-server
                         , transformers
                         , postgresql-simple >= 0.5
  default-language:    Haskell2010
